# Sharpen

./: .babelrc  .eslintrc.json  .gitignore  .gitmodules  .npmignore  CMakeLists.txt  LICENSE  README.md  build.sh  package-lock.json  package.json
core/: index.js  sharpen.js
lib/core/: core_error.cc  core_error.h  core_errors.cc  core_errors.h  core_sharpen.cc  core_sharpen.h  core_type.h  core_type_class.cc  core_type_class.h  core_type_factory.cc  core_type_factory.h  core_types.h  core_types_class.cc  core_types_class.h  core_types_factory.cc  core_types_factory.h  core_util.cc  core_util.h
lib/modules/: bundle.js  index.js  sharpen.js
lib/parser/: CMakeLists.txt  json.cc  json.h
lib/vdom/: CMakeLists.txt  vdom.cc  vdom.h  vdom_diff.cc  vdom_diff.h
preact/: package.json
preact/config/: rollup.config.js
preact/src/: clone-element.js  component.js  h.js  preact.js  render-queue.js  render.js  sharpen.js  util.js
preact/src/dom/: index.js
preact/src/vdom/: component-recycler.js  component.js  diff.js  index.js
scripts/: post-compile.js  post-compiling.js
scripts/compiler/: post-compile.js
scripts/frameworks/preact/: README.md
src/: main  main.cc  sharpen.cc
src/core/: core_errors.h  core_types.h  core_types_class.cc  core_types_class.h  core_types_factory.h
src/vdom/: vdom.cc  vdom.h
test/cpp/: gtest_sharpen_json.cc  gtest_sharpen_ld.cc  gtest_sharpen_type.cc  gtest_sharpen_vdom.cc
test/html/: .babelrc  index.html  index.js  package-lock.json  package.json  webpack.config.js
test/preact/: .gitignore  index.js  manifest.json  package-lock.json  package.json  preact.config.js  style.css  template.html
